# Milly-Agentic-AI

./: .gitignore  README.md  config.yaml  custom_patterns.txt  pyproject.toml  system_prompt.txt
milly_agent/: __init__.py  agent.py  authz.py  cli.py  tools.py
milly_agent/core/: __init__.py  audit.py  guardian.py  memory.py  rag.py
milly_agent/transports/: __init__.py  base.py  cli.py  discord.py  telegram.py
tests/: test_smoke.py
